# heat-replay-parser

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
examples/: classify_plain_properties.py  cluster_handles_by_layout.py  decode_baseline_position.py  decode_moving_trajectories.py  decode_trajectories_from_schema.py  disambiguate_delta_layout.py  dump_property_deltas.py  link_handle_to_entity.py  plot_coherent_tracks.py  recover_mask_widths.py  replay_to_json.py  terminal_position_and_schemawidth_probe.py  track_tag4_entities.py
replays/: .gitkeep
src/heat_replay/: __init__.py  bitstream.py  cli.py  container.py  events.py  model.py  objects.py  packed_scalar.py  replication.py  replication_client.py  schema.py  stream.py  summary.py  wire_value.py  wiretypes.py
tests/: conftest.py  test_api.py  test_container.py  test_handle_clustering.py  test_handle_linkage.py  test_mask_solver.py  test_objects.py  test_packed_scalar.py  test_replication.py  test_replication_client.py  test_schema.py  test_stream.py  test_terminal_probe.py  test_wire_value.py  test_wiretypes.py
