[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "heat-replay-parser"
version = "0.1.0"
description = "Decoder for World of Tanks: HEAT .replay files"
requires-python = ">=3.11"

[project.optional-dependencies]
dev = ["pytest"]

[project.scripts]
heat-replay = "heat_replay.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
